manifests/overlays/development/ingress-patch.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: demo-webapp-ingress
spec:
  rules:
    - host: demo-webapp-dev.krfa-lab.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend
                port:
                  number: 80
  tls:
  - hosts:
    - demo-webapp-dev.krfa-lab.com
    secretName: keyvault-demo-webapp-ingress
